--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ table {
 	border-collapse: collapse;
 }
 
+@media (max-width: 600px) {
+	table {
+		font-size: 75%;
+	}
+}
+
 th {
 	background:hsl(0 0% 0% / .05);
 }
